tests/trybuild-failures/not_comparison.stderr
error: expected a comparison, e.g. foo() == 1
 --> $DIR/not_comparison.rs:4:16
  |
4 |     assertify!(1 + 2);
  |                ^^^^^
